# Apollo-Purple

./: # Automated Irrigation System.txt  LICENSE  README.md  Thingy52 Blockchain Sensor Dashboard-1748491815180.json  blockchain.py  core2_display.c  core2_wifi.c  m5_server.py  mosquitto_debug.sh  mqtt_sender.py  project_doc.docx  requirements.txt  sensor_data.db  test.cpp
Core2/: README.md  prj.conf
Core2/src/: main.c
ESP32_C3/: prj.conf
ESP32_C3/src/: main.c
base_node/: CMakeLists.txt  prj.conf
base_node/src/: main.c  sensor_packet.pb.c  sensor_packet.pb.h  sensor_packet.proto
disco_sonic/: prj.conf
disco_sonic/boards/: disco_l475_iot1.overlay
disco_sonic/src/: main.c
grid_eye/: CMakeLists.txt  prj.conf
grid_eye/boards/: nrf52840dk_nrf52840.overlay
grid_eye/src/: main.c
mobile_node/: CMakeLists.txt  prj.conf
mobile_node/src/: main.c
sensor_node/: CMakeLists.txt
sensor_node/src/: main.c
